vbnc/vbnc/tests/Errors/32102.vb
Namespace Constraint1
    Class A(Of Z As {Structure, Structure})

    End Class
End Namespace